# easyatom-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_out.txt
include/easyatom/: c_api.h  c_api_learn.h
include/easyatom/auto/: energy.hpp  loop.hpp  loop_ranked.hpp
include/easyatom/clifford/: multivector.hpp
include/easyatom/cst/: compile.hpp  gp.hpp  operator_map.hpp  triplet.hpp  verbs.hpp
include/easyatom/decide/: counterfactual.hpp  decisor.hpp
include/easyatom/denoise/: entropy.hpp  sparsify.hpp
include/easyatom/dynamics/: koopman.hpp  koopman_lift.hpp  (+2 more)
jni/: easyatom_jni.cpp  easyatom_learn_jni.cpp
paper/: easyatom_arxiv.tex  easyatom_refs.bib
scripts/: build_and_test.ps1  validate_A_pubmed.py  validate_B_repurposing_hub.py  validate_C_hetionet.py  validate_D_repodb.py
src/: c_api.cpp  c_api_learn.cpp
tests/: CMakeLists.txt  test_autoloop.cpp  test_c_api.cpp  test_c_api_learn.cpp  test_clifford.cpp  test_coherence.cpp  test_compile.cpp  test_counterfactual.cpp  test_cst.cpp  test_decide.cpp  test_denoise.cpp  test_discovery.cpp  test_dynamics.cpp  test_energy.cpp  test_episodic.cpp  test_explain.cpp  test_facade.cpp  test_framework.hpp  test_gap.cpp  test_geodesic.cpp  test_gp.cpp  test_hilbert.cpp  test_hypothesis.cpp  test_infogeo.cpp  test_ingest.cpp  test_introspect.cpp  test_koopman_lift.cpp  test_laws.cpp  test_loop_ranked.cpp  test_main.cpp  test_modern_hopfield.cpp  test_multiprobe.cpp  test_operator_map.cpp  test_ops.cpp  test_persistent.cpp  test_proof.cpp  test_qkernel.cpp  test_qstate.cpp  test_sparsify.cpp  test_theorems.cpp  (+1 more)
(+20 files in other folders)
